# architecture-bionicpro

./: .gitignore  README.md  docker-compose.yaml
api/: .env  Dockerfile  pyproject.toml
api/app/: config.py  main.py
api/app/api/v1/endpoints/: reports.py
api/app/core/: exceptions.py  security.py
frontend/: .env
frontend/src/: App.tsx
frontend/src/components/: ReportPage.tsx
keycloak/: realm-export.json
