[project]
name = "bionicpro-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard,standart]>=0.115.12",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.4.0",
    "uvicorn>=0.34.2",
]
